--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,48 @@
-.App {
-  text-align: center;
+.App{
+width: 100% vw;
+height: 100% vh;
+background: grey;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+header{
+max-width: 1024px;
+background: rgb(68, 63, 63);
 }
+.header_content{
+margin-left: 80px;
+margin-right: 80px;
+display: flex;
+justify-content: space-between;
+flex-direction: row;
+}
+main{
+max-width: 864px;
+margin-right: 80px;
+margin-left: 80px;
+}
+.hero_top_bar{
+display: flex;
+justify-content: space-between;
+flex-direction: row;
+}
+.hero_top_bar_button{
+  margin-top: 8px;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+}
+.hero_content_container{
+  background:white;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.hero_content{
+  flex-grow: 3;
 }
+.hero_sidebar{
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+}
+nav{
+  max-width: 864px;
+  margin-right: 80px;
+  margin-left: 80px;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
 }
