--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,18 @@
 .App{
-width: 100% vw;
-height: 100% vh;
-background: grey;
+width: 100 vw;
+height: 100 vh;
+margin: 0px;
+background: rgb(97, 93, 93);
+display: flex;
+justify-content: center;
+}
+.content{
+  background: grey;
+  width: 1024px;
+  align-self: center;
 }
 header{
-max-width: 1024px;
+width: 1024px;
 background: rgb(68, 63, 63);
 }
 .header_content{
@@ -13,20 +21,40 @@ margin-right: 80px;
 display: flex;
 justify-content: space-between;
 flex-direction: row;
+align-items: flex-end;
+
+}
+.header_title{
+  font-size: 200%;
+  margin-bottom: 0px;
+  padding-bottom: 16px;
+}
+.header_date{
+  margin-bottom: 0px;
+  padding-bottom: 16px;
+}
+.hero_top_bar_button{
+  color: white;
+  background-color: Transparent;
+  background-repeat:no-repeat;
+  border: none;
+  cursor:pointer;
+  overflow: hidden;
+  outline:none;
 }
 main{
-max-width: 864px;
+width: 864px;
 margin-right: 80px;
 margin-left: 80px;
+font-size:2.75ex;
 }
 .hero_top_bar{
 display: flex;
 justify-content: space-between;
 flex-direction: row;
+padding: 16px;
 }
 .hero_top_bar_button{
-  margin-top: 8px;
-
 }
 .hero_content_container{
   background:white;
@@ -34,15 +62,35 @@ flex-direction: row;
 }
 .hero_content{
   flex-grow: 3;
+  margin:24px
 }
 .hero_sidebar{
+  padding: 16px;
 
 }
 nav{
-  max-width: 864px;
+  width: 1024;
+  background: black;
+  left:0px;
+  bottom:0px;
+}
+.nav_content{
+  width: 864px;
   margin-right: 80px;
   margin-left: 80px;
   display: flex;
   justify-content: space-between;
   flex-direction: row;
+  background: black;
+}
+.nav_bar_button{
+  color: white;
+  background-color: Transparent;
+  background-repeat:no-repeat;
+  border: none;
+  cursor:pointer;
+  overflow: hidden;
+  outline:none;
+
+  margin: 8px;
 }
