--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App{
 width: 100 vw;
-height: 100 vh;
+height: 100vh;
 margin: 0px;
 background: rgb(97, 93, 93);
 display: flex;
@@ -17,8 +17,7 @@ background: #303030;
 }
 .header_content{
 padding-top: 32px;
-margin-left: 80px;
-margin-right: 80px;
+margin: 0px 80px 0px 80px;
 display: flex;
 justify-content: space-between;
 flex-direction: row;
@@ -44,8 +43,7 @@ align-items: flex-end;
 }
 main{
 width: 864px;
-margin-right: 80px;
-margin-left: 80px;
+margin: 0px 80px 0px 80px;
 font-size:2.75ex;
 }
 .hero_top_bar{
@@ -56,10 +54,7 @@ padding: 6px;
 }
 .hero_top_bar_button{
   font-size: 0.6em;
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-top: 12px;
-  padding-bottom: 12px;
+  padding: 12px 20px 12px 20px;
 }
 .hero_content_container{
   background:white;
@@ -73,8 +68,7 @@ padding: 6px;
   font-size: 0.8em;
 }
 .hero_sidebar{
-  padding: 16px;
-  padding-top:60px;
+  padding: 105px 16px 16px 16px;
   background: #F2F2F2;
   color: #1D9ED9;
 }
@@ -94,8 +88,7 @@ nav{
 }
 .nav_content{
   width: 864px;
-  margin-right: 80px;
-  margin-left: 80px;
+  margin:  0px 80px 0px 80px;
   display: flex;
   justify-content: space-between;
   flex-direction: row;
