--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App{
-width: 100 vw;
+width: 100vw;
 height: 100vh;
 margin: 0px;
 background: rgb(97, 93, 93);
@@ -7,6 +7,7 @@ display: flex;
 justify-content: center;
 }
 .content{
+  margin: 60px;
   background: #737373;
   width: 1024px;
   align-self: center;
